# kink-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.md  pyproject.toml
dg_mcp/: device.py  lovense.py  protocol.py  server.py  waves.py
docs/specs/: 2026-04-18-web-ui-uat-findings.md
docs/superpowers/plans/: 2026-04-18-web-ui.md  2026-04-19-web-ui-uat-fixes.md
docs/superpowers/specs/: 2026-04-18-web-ui-design.md
kink_mcp/: device.py  lovense.py  server.py  ui.py
tests/: test_device_manager.py  test_lovense.py
