[project]
name = "dg-mcp"
version = "0.1.0"
description = "MCP Server for DG-Lab Coyote 3.0 via BLE"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "0xNull.Ai", email = "271426072+0xNullAI@users.noreply.github.com" }]
requires-python = ">=3.10"
keywords = ["mcp", "dg-lab", "ble", "bluetooth", "coyote"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "bleak>=0.22.0",
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/0xNullAI/DG-MCP"
Repository = "https://github.com/0xNullAI/DG-MCP"
Issues = "https://github.com/0xNullAI/DG-MCP/issues"

[project.scripts]
dg-mcp = "dg_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
